# op-solver

./: .clang-format  .gitignore  Dockerfile  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: build-exact.yml  build-heur.yml  build-test.yml  clang-format-check.yml
examples/: op-check-solution-feasibility.c  op-default.c
src/: Makefile.am  op-solver.c  op-solver.h
src/cmd/: opt.c
src/cp/: Makefile.am  cp.h  env.c  opt.c  prob.c  sol.c
src/cp/exact/: Makefile.am  env.c  exact.h  opt.c  stats.c
src/cp/exact/bac/: Makefile.am  bac.h  dual.c  env.c  init.c  opt.c  param.c  pricing.c  stats.c  xheur.c
src/cp/exact/bac/branch/: simple.c
src/cp/exact/bac/cut/: age.c  cut.c  hash.c  logical.c  loop.c  repo.c  skeleton.c
src/cp/exact/bac/cut/comb/: blossom_fast.c  blossom_ghfast.c  blossom_mst.c
src/cp/exact/bac/cut/cover/: cycle.c  edge.c  vertex.c
src/cp/exact/bac/cut/path/: path.c
src/cp/exact/bac/cut/sec/: gomoryhu.c  hong.c  sec.c
src/cp/exact/bac/lib/: lp.c
src/cp/exact/bac/shrinking/: c1.c  c1c2.c  s1.c  shrinking.c
src/cp/heur/: Makefile.am  add.c  drop.c  env.c  heur.h  stats.c
src/cp/heur/ea/: Makefile.am  crossover.c  ea.h  opt.c  param.c  selection.c  stats.c
src/cp/init/: Makefile.am  init.c  init.h  param.c  select.c  stats.c
src/cp/lib/: tsp.c
src/data/: Makefile.am  data.c  data.h
src/data/io/: read.c
src/data/nearest/: banach.c  euclidean.c  hilbert.c  nearest.c
src/data/nearest/kdtree/: Makefile.am  kdtree.c  kdtree.h
src/graph/: Makefile.am  connect.c  ghtree.c  graph.c  graph.h
src/graph/cliques/: hash.c  repo.c
src/ip/: Makefile.am  env.c  ip.h  param.c  sol.c  stats.c
src/ip/exact/: Makefile.am  env.c  exact.c  exact.h  stats.c
src/ip/exact/bac/: Makefile.am  env.c  stats.c
src/ip/exact/bac/branch/: branch.c  dfs.c  history.c
src/kp/: Makefile.am  kp.c  kp.h  param.c  prob.c  sol.c  stats.c
src/lib/: Makefile.am  dheap.c  prime.c  rng.c  sort.c  stats.c
src/lp/: Makefile.am  env.c  lp.h  param.c  sol.c
src/lp/lib/: cplex.c
src/op/: Makefile.am  op.h
src/op/exact/: Makefile.am  exact.h
src/op/exact/bac/: Makefile.am  bac.h
src/op/heur/: Makefile.am  heur.h
src/op/heur/ea/: Makefile.am  ea.h
src/op/init/: Makefile.am  param.c
src/prob/: Makefile.am
src/prob/cp/: Makefile.am  cp.h  env.c  opt.c  param.c  pop.c  prob.c  sol.c  stats.c
src/prob/cp/exact/: Makefile.am  opt.c  param.c
src/prob/cp/exact/bac/: Makefile.am  bac.h  dual.c  env.c  init.c  opt.c  param.c  pricing.c  stats.c  xheur.c
src/prob/cp/exact/bac/branch/: simple.c
src/prob/cp/exact/bac/cut/: age.c  cut.c  hash.c  logical.c  loop.c  skeleton.c
src/prob/cp/exact/bac/cut/comb/: blossom_fast.c  blossom_ghfast.c  blossom_mst.c
src/prob/cp/exact/bac/cut/cover/: cycle.c  edge.c  vertex.c
src/prob/cp/exact/bac/cut/path/: path.c
src/prob/cp/exact/bac/cut/sec/: gomoryhu.c  hong.c  sec.c
src/prob/cp/exact/bac/lib/: lp.c
src/prob/cp/exact/bac/shrinking/: c1c2c3.c  s1.c
src/prob/cp/heur/: Makefile.am  add.c  env.c  heur.h  param.c
src/prob/cp/heur/ea/: Makefile.am  env.c  mutation.c  opt.c  selection.c
src/prob/cp/init/: Makefile.am  env.c  init.c  init.h  param.c  select.c
src/prob/cp/lib/: tsp.c
src/prob/ip/: Makefile.am  ip.h  prob.c  sol.c
src/prob/ip/exact/: Makefile.am  param.c
src/prob/ip/exact/bac/: Makefile.am  bac.h  param.c
src/prob/ip/exact/bac/branch/: branch.c  dfs.c  history.c
src/prob/kp/: Makefile.am  env.c  kp.h
src/prob/kp/exact/: bab.c
src/prob/lib/: Makefile.am
src/prob/lib/data/: Makefile.am  data.h
src/prob/lib/data/io/: read.c
src/prob/lib/data/nearest/: euclidean.c
src/prob/lib/data/nearest/kdtree/: Makefile.am
src/prob/lib/graph/: Makefile.am  arc_hash.c  ghtree.c  graph.h  maxflow.c  mincut.c  mst.c
src/prob/lib/graph/cliques/: cliques.c  repo.c
src/prob/lp/: Makefile.am  data.c  env.c  lp.h  param.c  prob.c  sol.c  stats.c
src/prob/lp/lib/: dummy.c
src/prob/op/: Makefile.am  env.c  op.h  param.c  prob.c  stats.c
src/prob/op/exact/: Makefile.am
src/prob/op/exact/bac/: Makefile.am
src/prob/op/heur/: Makefile.am
src/prob/op/heur/ea/: Makefile.am  ea.h
src/prob/op/init/: Makefile.am  env.c  init.h  stats.c
src/prob/tsp/: Makefile.am  env.c  tsp.h
src/prob/tsp/heur/: Makefile.am  env.c  param.c
src/prob/tsp/heur/kopt/: ls.c
src/prob/tsp/heur/linkern/: env.c  linkern.c  linkern.h
src/prob/tsp/init/: Makefile.am  init.c  init.h  param.c
src/tsp/: Makefile.am  env.c  param.c  stats.c  tsp.h
src/tsp/heur/: Makefile.am  heur.h  opt.c  stats.c
src/tsp/heur/linkern/: Makefile.am  flip_two.c  linkern.c  param.c  stats.c
src/tsp/init/: Makefile.am  env.c  init.h  random.c  stats.c
