myincludesubdir      = $(pkgincludedir)/cp/
myincludesub_HEADERS = init.h
noinst_LTLIBRARIES   = libsolver-cp-init.la

libsolver_cp_init_la_SOURCES = \
			       stats.c  \
			       env.c  \
			       param.c  \
			       select.c  \
			       init.c

libsolver_cp_init_la_CPPFLAGS = -I$(top_srcdir)/src
