include_HEADERS        = kp.h
noinst_LTLIBRARIES        = libsolver-prob-kp.la

libsolver_prob_kp_la_SOURCES = prob.c \
				  env.c  \
				  param.c  \
				  stats.c  \
				  sol.c \
				  kp.c \
				  exact/bab.c

libsolver_prob_kp_la_CPPFLAGS = \
				   -I$(top_srcdir)/src \
				   -I$(top_srcdir)/src/prob
