myincludesubdir      = $(pkgincludedir)/cp/heur/
myincludesub_HEADERS = ea.h
noinst_LTLIBRARIES   = libsolver-cp-heur-ea.la

libsolver_cp_heur_ea_la_SOURCES = \
					  env.c  \
					  param.c  \
					  stats.c  \
					  opt.c  \
					  crossover.c  \
					  mutation.c  \
					  selection.c

libsolver_cp_heur_ea_la_CPPFLAGS = -I$(top_srcdir)/src
