include_HEADERS        = init.h
noinst_LTLIBRARIES        = libsolver-prob-cp-init.la

libsolver_prob_cp_init_la_SOURCES = \
				       stats.c  \
				       env.c  \
				       param.c  \
				       select.c  \
				       init.c

libsolver_prob_cp_init_la_CPPFLAGS = \
					-I$(top_srcdir)/src \
					-I$(top_srcdir)/src/prob
