include_HEADERS        = graph.h
lib_LTLIBRARIES        = libsolver-prob-lib-graph.la
libsolver_prob_lib_graph_la_SOURCES = graph.c            \
					 arc_hash.c         \
					 cliques/cliques.c  \
					 cliques/repo.c  \
					 ghtree.c \
					 maxflow.c \
					 mincut.c \
					 mst.c \
					 connect.c

libsolver_prob_lib_graph_la_CPPFLAGS = \
					  -I$(top_srcdir)/src
