include_HEADERS        = init.h
noinst_LTLIBRARIES     = libsolver-prob-tsp-init.la

libsolver_prob_tsp_init_la_SOURCES = \
					stats.c  \
					env.c  \
					param.c  \
					init.c  \
					random.c

libsolver_prob_tsp_init_la_CPPFLAGS = \
					 -I$(top_srcdir)/src \
					 -I$(top_srcdir)/src/prob

