noinst_LTLIBRARIES   = libsolver-tsp-heur-linkern.la

myincludesubdir      = $(pkgincludedir)/tsp/heur/
myincludesub_HEADERS = linkern.h

libsolver_tsp_heur_linkern_la_SOURCES = \
				stats.c  \
				env.c  \
				param.c  \
				flip_two.c  \
				linkern.c

libsolver_tsp_heur_linkern_la_CPPFLAGS = -I$(top_srcdir)/src
